--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   body {
     background-color: gainsboro;
   }
-
   .App-header {
     display: flex;
     justify-content: space-between;
@@ -10,35 +9,30 @@
     width: 100%;
     /* border: 2px solid black; */
   }
-
   #loveSymbol {
     margin-left: 33%;
     height: 25px;
-    width: 30px;
+   width: 30px;
   }
-
   #icon {
     margin: 0;
-    /* margin-top: 15px; */
-    margin-right: 8px;
-    height: 25px;
-    width: 30px;
+   /* margin-top: 15px; */
+   margin-right: 8px;
+   height: 25px;
+   width: 30px;
   }
-
   #head {
     margin: 0;
     font-size: 22px;
     margin-left: 10px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
-
   .mainStatus {
     display: flex;
     justify-content: flex-start;
     overflow: scroll;
     height: 90px;
   }
-
   .div-status {
     margin-top: 5px;
     margin-left: 5px;
@@ -47,7 +41,6 @@
     border: 2px solid black;
     border-radius: 50%;
   }
-
   #status {
     margin: 0;
     height: 50px;
@@ -55,13 +48,11 @@
     /* border: 1px solid black; */
     border-radius: 50%;
   }
-
   #userName {
     margin-top: 5px;
     text-align: center;
     font-size: 10px;
   }
-
   .Mini-container {
     margin: 0;
     width: 100%;
@@ -69,7 +60,6 @@
     justify-content: flex-start;
     /* border: 2px solid black; */
   }
-
   #div-img {
     margin-top: 8px;
     margin-left: 5px;
@@ -78,7 +68,6 @@
     border: 2px solid black;
     border-radius: 50%;
   }
-
   #profile {
     margin-top: 2px;
     margin-left: 2px;
@@ -87,70 +76,61 @@
     border: 1px solid black;
     border-radius: 50%;
   }
-
   #txt {
     margin-left: 10px;
   }
-
   #icon1 {
     margin-top: 8px;
-    height: 30px;
-    width: 7%;
-    margin-left: 41%;
+   height: 30px;
+   width: 7%;
+   margin-left: 41%; 
   }
-
+  /* #profile1 {
+    width: 100%;
+  } */
   .threeIcons {
     display: flex;
     justify-content: flex-start;
   }
-
   #heartIcon {
     margin-top: 7px;
     height: 20px;
     width: 10%;
   }
-
   #likes {
     margin-left: -2px;
     font-size: 11px;
     text-align: start;
   }
-
   #msgIcon {
     margin: 7px;
     height: 20px;
     width: 10%;
   }
-
-  #msgs {
+  #msgs{
     margin-left: -5px;
     font-size: 11px;
   }
-
   #sendIcon {
     margin: 7px;
     height: 20px;
     width: 10%;
   }
-
   #msgIcon {
     height: 20px;
     width: 10%;
   }
-
   #bookmark {
     margin-top: 7px;
     height: 20px;
     width: 50px;
-    margin-left: 36%;
+    margin-left: 36%;   
 
   }
-
   .footer {
     display: flex;
     justify-content: flex-start;
   }
-
   #userPic {
     margin-top: 6px;
     margin-left: 5px;
@@ -159,27 +139,23 @@
     border: 1px solid black;
     border-radius: 50%;
   }
-
   #likedPeople {
     margin-left: 8px;
     margin-top: 8px;
     font-size: 12px;
   }
-
   #comment {
     margin-top: -6px;
     margin-left: 8px;
     font-size: 14px;
   }
-
   #time {
     margin-left: 8px;
-    margin-top: -10px;
-    margin-bottom: 3px;
-    font-size: 11px;
-    color: black;
+       margin-top: -10px;
+       margin-bottom: 3px;
+       font-size: 11px;
+       color: black;
   }
-
   .bottomPage {
     left: 0;
     bottom: 0;
@@ -190,14 +166,12 @@
     border-top: 1px solid black;
     background-color: #808080;
   }
-
   #btmImg {
     margin-top: 7px;
     margin-bottom: 8px;
     height: 20px;
     width: 20px;
   }
-
   #btmPic {
     margin-top: 7px;
     margin-bottom: 8px;
@@ -206,7 +180,6 @@
     border: 2px solid black;
     border-radius: 50%;
   }
-
   #f_icon {
     margin-top: 9px;
     margin-bottom: 8px;
