--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   }
   #icon {
    height: 25px;
-   width: 30px;
+   width: 10px;
   }
   #head {
     margin: 0;
@@ -78,6 +78,7 @@
   }
   #icon1 {
     margin-top: 8px;
+    margin-left: 8px;
    height: 30px;
    width: 9%;
    margin-left: 41%; 
