--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   }
   #icon {
    height: 25px;
-   width: 10px;
+   margin-right: 20px;
   }
   #head {
     margin: 0;
@@ -80,7 +80,7 @@
     margin-top: 8px;
     margin-left: 8px;
    height: 30px;
-   width: 9%;
+   width: 11%;
    margin-left: 41%; 
   }
   #profile1 {
