--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,15 @@
   }
   .App-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 30px;
     width: 100%;
     /* border: 2px solid black; */
   }
   #loveSymbol {
-    margin-left: 50%;
+    margin-left: 60%;
     height: 25px;
+   width: 30px;
   }
   #icon {
    height: 25px;
