--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@
     margin-top: 8px;
     margin-left: 50rem;
    height: 30px;
-   width: 11%; 
+   width: 54px; 
   }
   #profile1 {
     width: 100%;
