creates a repository instagram home page

--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,9 @@
   }
   #icon1 {
     margin-top: 8px;
-    margin-left: 50rem;
+    margin-left: 30px;
    height: 30px;
-   width: 54px; 
+   width: 50%; 
   }
   #profile1 {
     width: 100%;
