--- a/src/App.css
+++ b/src/App.css
@@ -79,8 +79,9 @@
   }
   #icon1 {
     margin-top: 8px;
-    margin-left: 30px;
-   height: 30px; 
+    margin-left: 36%;
+   height: 30px;
+   width: 50px; 
   }
   #profile1 {
     width: 100%;
