--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,19 @@
   }
   .App-header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 30px;
     width: 100%;
     /* border: 2px solid black; */
   }
   #loveSymbol {
-    margin-left: 30%;
+    margin-left: 35%;
     height: 30px;
    width: 30px;
   }
   #icon {
    height: 30px;
-   margin-right: 20px;
+   margin-right: 15px;
    width: 30px;
   }
   #head {
@@ -79,7 +79,7 @@
   }
   #icon1 {
     margin-top: 8px;
-    margin-left: 36%;
+    margin-left: 60%;
    height: 30px;
    width: 50px; 
   }
