--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,14 @@
     /* border: 2px solid black; */
   }
   #loveSymbol {
-    margin-left: 30%;
-    height: 30px;
+    margin-left: 110px;
+    height: 23px;
    width: 30px;
   }
   #icon {
-   height: 30px;
+   height: 25px;
    width: 30px;
-   margin-left: 50px;
+   margin-right: 12px;
   }
   #head {
     margin: 0;
@@ -79,9 +79,9 @@
   }
   #icon1 {
     margin-top: 8px;
-    margin-left: 50px;
-   height: 30px;
-   width: 50px; 
+    margin-left: 100px;
+   height: 25px;
+   width: 55px; 
   }
   #profile1 {
     width: 100%;
