--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,7 @@
     margin-left: 5px;
     height: 80px;
     width: 84px;
-    border-top: #f9ce34;
-    border-left: #ee2a7b;
-    border-right: #ee2a7b;
-    border-bottom: #6228d7;
+    border: 2px solid black;
     border-radius: 50%;
   }
   #status {
