--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,22 @@
     justify-content: space-between;
     height: 30px;
     width: 100%;
-    /* border: 2px solid black; */
   }
+.headerView {
+  display: flex;
+  justify-content: space-around;
+  height: 30px;
+  width: 24%;
+}
   #loveSymbol {
-    margin-left: 200px;
-    height: 23px;
-   width: 30px;
+  height: 23px;
+  width: 23px;
+
   }
   #icon {
-   height: 25px;
-   width: 30px;
-   margin-right: 15px;
+    height: 23px;
+    width: 23px;
+
   }
   #head {
     margin: 0;
@@ -29,21 +34,20 @@
     display: flex;
     justify-content: flex-start;
     overflow: scroll;
-    height: 110px;
+    height: 105px;
   }
   .div-status {
     margin-top: 5px;
     margin-left: 5px;
-    height: 80px;
-    width: 84px;
+    height: 60px;
+    width: 60px;
     border: 2px solid black;
     border-radius: 50%;
   }
   #status {
     margin: 0;
-    height: 80px;
-    width: 84px;
-    /* border: 1px solid black; */
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
   }
   #userName {
@@ -55,74 +59,88 @@
     margin: 0;
     width: 100%;
     display: flex;
+    justify-content: space-between;
+  }
+  #profileText {
+    display: flex;
     justify-content: flex-start;
-    /* border: 2px solid black; */
+    width: 88%;
   }
   #div-img {
-    margin-top: 8px;
-    margin-left: 5px;
-    height: 25px;
-    width: 25px;
+    margin-top: 7px;
+    margin-left: 3px;
+    height: 20px;
+    width: 20px;
     border: 2px solid black;
     border-radius: 50%;
   }
+  #ThreeDotsIcon {
+    width: 9%;
+
+  }
   #profile {
-    margin-top: 2px;
-    margin-left: 2px;
+    margin-top: -1px;
+    margin-left: -1px;
     height: 20px;
-    width: 19px;
+    width: 20px;
     border: 1px solid black;
     border-radius: 50%;
   }
   #txt {
-    margin-left: 10px;
+    margin-top: 11px;
+    margin-left: 6px;
   }
   #icon1 {
-    margin-top: 8px;
-    margin-left: 180px;
-   height: 25px;
-   width: 55px; 
+    height: 23px;
+    width: 23px;
   }
   #profile1 {
     width: 100%;
   }
   .threeIcons {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+  }
+  .iconsOfthree {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    height: 30px;
+    
+  }
+  .rightIcon {
+    display: flex;
+    justify-content: flex-end;
+    width: 10%;
   }
   #heartIcon {
     margin-top: 7px;
     height: 20px;
-    width: 10%;
+    width: 30px;
   }
   #likes {
-    margin-left: -2px;
     font-size: 11px;
-    text-align: start;
   }
   #msgIcon {
-    margin: 7px;
+    margin-top: 7px;
     height: 20px;
-    width: 10%;
+    width: 30px;
   }
   #msgs{
-    margin-left: -5px;
     font-size: 11px;
   }
   #sendIcon {
-    margin: 7px;
+    margin-top: 7px;
     height: 20px;
-    width: 10%;
+    width: 30px;
   }
   #msgIcon {
     height: 20px;
-    width: 10%;
   }
   #bookmark {
     margin-top: 7px;
     height: 20px;
-    width: 50px;
-    margin-left: 40%;   
+    width: 50px;   
 
   }
   .footer {
