creates a repository instagram home page

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
     display: flex;
     justify-content: flex-start;
     overflow: scroll;
+    overflow: hidden;
     height: 105px;
   }
   .div-status {
