--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,94 @@
-body {
-  margin: 0;
-  padding: 0;
+.Container {
+  margin: 20px;
 }
 h2 {
   font-size: 60px;
   font-family: sans-serif;
   display: flex;
   justify-content: center;
+  color: blue;
 }
 h3 {
-  font-size: 40px;
-  background-color: green;
   display: flex;
   justify-content: center;
-  border-radius: 5px;
-  padding: 150px 0;
-  margin: 0px auto;
-  font-family: sans-serif;
-  margin: 0 50px;
+  margin-left: 40px;
+  font-size: 20px;
+  color: blue;
 }
+.imgDiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
+#cc {
+  height: 350px;
+  width: 90%;
+  border-radius: 10px;
+}
+.slick-arrow.slick-prev,
+.slick-arrow.slick-next {
+  background-color: black;
+  height: 100px;
+  width: 50px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+h2 {
+  font-size: 20px;
+}  
+#cc {
+    border-radius: 10px;
+}
+.slick-arrow.slick-prev,
+.slick-arrow.slick-next {
+  background-color: black;
+  height: 100px;
+  width: 50px;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
+  margin: 0 auto;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  width: 90%;
+  color: rgb(52, 48, 48);
+}
+h2 {
+  text-align: center;
+}
+#cc {
+  height: 300px;
+  width: 100%;
+  border-radius: 10px;
+} */
