--- a/src/App.css
+++ b/src/App.css
@@ -16,30 +16,32 @@ h3 {
   color: blue;
 }
 .imgDiv {
-  width: 100%;
   display: flex;
   justify-content: center;
   border-radius: 10px;
 }
 #cc {
-  height: 350px;
   width: 90%;
   border-radius: 10px;
 }
 .slick-arrow.slick-prev,
 .slick-arrow.slick-next {
-  background-color: black;
-  height: 100px;
+  background: black;
+  height: 50px;
   width: 50px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
 h2 {
   font-size: 20px;
+
 }  
 #cc {
     border-radius: 10px;
     height: 100px;
+}
+h3 {
+  margin-right: 40px;
 }
 .slick-arrow.slick-prev,
 .slick-arrow.slick-next {
